--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
       "ejs":"^3.1.8",
       "bcrypt":"^5.0.1",
       "falsisdb":"2.2.7",
-      "wio.db":"4.0.22"
+      "wio.db":"4.0.22",
+      "cookie-parser":"^1.4.6",
+      "express-session":"^1.17.3",
+      "jsonwebtoken":"^8.5.1",
+      "axios":"^0.27.2",
+      "node-fetch":"^3.2.6"
   }
 }
